--- a/lib/views/index.erb
+++ b/lib/views/index.erb
@@ -53,11 +53,7 @@
 
     <div id="content" class="large-10 columns">
       <div id="content-inner">
-        <form action="/sources" method="post">
-          <input type="text" name="identifier" value="jumpstartlab">
-          <input type="text" name="rootUrl" value="http://jumpstartlab.com">
-          <input type="submit">
-        </form>
+        <img src="http://www.insurancequotes.com/wp-content/uploads/2012/08/insurance-spying-230x300.jpg">
       </div>
     </div>
   </div>
