--- a/lib/views/sources.erb
+++ b/lib/views/sources.erb
@@ -44,7 +44,7 @@
     <div id="sub-nav" class="large-2 columns">
       <ul class="sub-nav">
         <li>
-          <a href="/sources/<% @identifier %>" class="active">
+          <a href="/sources/<%= @identifier %>" class="active">
             <i class="icon-dashboard"></i>Dashboard
           </a>
         </li>
